<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_top_corner"
        android:clipToOutline="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_m"
            android:layout_marginBottom="@dimen/space_m"
            android:layout_marginHorizontal="@dimen/space_m"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            >
            <TextView
                android:id="@+id/textview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_m"
                android:gravity="center_horizontal"
                android:text="@string/board_youtube_link_title"
                style="@style/font_p2"
                android:textColor="@color/fg2" />
            <com.constant.japaneseeveryday.view.HHEditText
                android:id="@+id/edittext_youtube_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_x4s"
                android:hint="@string/board_youtube_link_input_hint"
                android:maxLength="@integer/max_length_youtube_link"
                android:padding="@dimen/space_xxs"
                android:background="@drawable/shape_rectangle_stroke_8dp"
                style="@style/font_p2"
                />
            <TextView
                android:id="@+id/textview_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_x4s"
                android:textColor="@color/fg_red"
                android:text="@string/board_youtube_link_error_message"
                style="@style/font_p2"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_insert"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/common_insert"
                style="@style/font_p2"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>