<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg3"
        tools:context=".scene.main.StudyActivity">

        <com.constant.everydayjapanese.view.NavigationView
            android:id="@+id/navigationview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_height"
            app:layout_constraintBottom_toTopOf="@id/linearlayout_textviews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearlayout_textviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/bg0"
            app:layout_constraintBottom_toTopOf="@id/recyclerview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/navigationview">

            <TextView
                android:id="@+id/textview_score"
                style="@style/font_t3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/space_xl"
                android:layout_marginBottom="@dimen/space_m"
                android:textColor="@color/fg0" />

            <TextView
                android:id="@+id/textview_subscore"
                style="@style/font_p1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/space_m"
                android:textColor="@color/fg0" />

            <Button
                android:id="@+id/button_bookmark"
                style="@style/font_p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/img_favorite_off"
                android:drawablePadding="@dimen/space_xs"
                android:drawableTint="@color/selector_normal_fg0_press_fg5"
                android:paddingLeft="@dimen/space_xs"
                android:paddingRight="@dimen/space_xs"
                android:text="@string/add_incorrect_word_favorites"
                android:textColor="@color/selector_normal_fg0_press_fg5"

                />

            <Button
                android:id="@+id/button_retest"
                style="@style/font_p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/img_reload"
                android:drawablePadding="@dimen/space_xs"
                android:drawableTint="@color/selector_normal_fg0_press_fg5"
                android:paddingLeft="@dimen/space_xs"
                android:paddingRight="@dimen/space_xs"
                android:text="@string/test_again_for_incorrect_words"
                android:textColor="@color/selector_normal_fg0_press_fg5"

                />

            <Button
                android:id="@+id/button_finishtest"
                style="@style/font_p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/img_exit"
                android:drawablePadding="@dimen/space_xs"
                android:drawableTint="@color/selector_normal_fg0_press_fg5"
                android:paddingLeft="@dimen/space_xs"
                android:paddingRight="@dimen/space_xs"
                android:text="@string/end_test"
                android:textColor="@color/selector_normal_fg0_press_fg5" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/space_m"
                android:background="@color/bg4" />

            <TextView
                android:id="@+id/textview_wrongword_label"
                style="@style/font_p1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_m"
                android:layout_marginBottom="@dimen/space_m"
                android:text="@string/incorrect_word"
                android:textColor="@color/fg0"
                android:background="@color/bg0"
                app:layout_constraintBottom_toTopOf="@id/recyclerview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linearlayout_textviews" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bg2" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/bg0"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearlayout_textviews" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>